--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     implementation "com.google.android.material:material:$rootProject.materialVersion"
     // Testing
     androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
 
 }
